Make Lucas happy